added function hideSelf

--- a/5-module/1-task/index.html
+++ b/5-module/1-task/index.html
@@ -9,12 +9,10 @@
 </head>
 
 <body>
-  <button class="hide-self-button">Нажмите, чтобы спрятать</button>
+  <button class="hide-self-button" onclick="hideSelf()">Нажмите, чтобы спрятать</button>
 
   <script src="./index.js"></script>
-  <script>
-    hideSelf();
-  </script>
+  
 </body>
 
 </html>
